[gd_scene load_steps=4 format=2]

[ext_resource path="res://roboto.tres" type="DynamicFont" id=1]
[ext_resource path="res://roboto2.tres" type="DynamicFont" id=2]
[ext_resource path="res://main_menu.gd" type="Script" id=3]

[node name="network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer_configure" type="Control" parent="."]
margin_left = 982.0
margin_top = 486.0
margin_right = 1022.0
margin_bottom = 526.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host_button" type="Button" parent="multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -42.0
margin_right = 130.0
margin_bottom = 37.9999
custom_fonts/font = ExtResource( 1 )
text = "Host game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_button" type="Button" parent="multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = 70.0
margin_right = 130.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 1 )
text = "Join game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_ip_address" type="LineEdit" parent="multiplayer_configure"]
anchor_left = -24.55
anchor_top = -12.15
anchor_right = 23.45
anchor_bottom = 14.85
margin_left = 776.0
margin_top = 728.0
margin_right = -744.0
margin_bottom = -302.0
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Enter IP address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="device_ip_address" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="multiplayer_configure/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="multiplayer_configure/join_button" to="." method="_on_join_button_pressed"]
