[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/entities/menu_player/player_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/scenes/GUI/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/assets/sprites/GUI/in_game/buttons/lan_logo.svg" type="Texture" id=3]
[ext_resource path="res://source/assets/sprites/GUI/logo_design/FUNCit_game_logo_dark_transparent.png" type="Texture" id=4]
[ext_resource path="res://source/fonts/oxygen/oxygen_bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://source/assets/scripts/ui_element_handlers/main_menu.gd" type="Script" id=6]
[ext_resource path="res://source/scenes/OVERLAY/elements/button.tscn" type="PackedScene" id=7]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="player" parent="background" instance=ExtResource( 1 )]
position = Vector2( 408, 872 )

[node name="foreground" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.49835
margin_bottom = 1.49829
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FunCitGameLogoDarkTransparent" type="Sprite" parent="foreground"]
position = Vector2( 980, 333.502 )
scale = Vector2( 0.462963, 0.462963 )
texture = ExtResource( 4 )

[node name="play" parent="foreground" instance=ExtResource( 7 )]
margin_left = 810.0
margin_top = 500.0
margin_right = 1110.0
margin_bottom = 572.0

[node name="Label" type="Label" parent="foreground/play"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -36.0
margin_right = 150.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LAN_party" parent="foreground" instance=ExtResource( 7 )]
margin_left = 810.0
margin_top = 580.0
margin_right = 1110.0
margin_bottom = 652.0

[node name="Label2" type="Label" parent="foreground/LAN_party"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.8223
margin_top = -36.0
margin_right = 134.178
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LAN Party"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lan_logo" type="Sprite" parent="foreground/LAN_party"]
position = Vector2( 33.5, 36 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="exit" parent="foreground" instance=ExtResource( 7 )]
margin_left = 810.0
margin_top = 660.0
margin_right = 1110.0
margin_bottom = 732.0

[node name="Label" type="Label" parent="foreground/exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -36.0
margin_right = 150.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EXIT"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="foreground/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="foreground/LAN_party" to="." method="_on_LAN_party_pressed"]
[connection signal="pressed" from="foreground/exit" to="." method="_on_exit_pressed"]
